# dext-rs

./: .gitignore  Cargo.toml
dext/: Cargo.toml
dext/src/: lib.rs  server.rs
dext/src/builder/: mod.rs  utils.rs
html/: index.html  script.js
