[package]
name = "dext"
version = "0.1.0"
authors = ["Sanket Chaudhari <chaudharisanket2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst = "0.4"
memmap = "0.7"
walkdir = "2.3"
html-minifier = "3.0"
deflate = { version = "0.9", features = ["gzip"] }
hyper = { version = "0.14", features = ["server", "http2", "tcp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }